--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.1",
+    "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.1",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.0",
     "sass": "^1.75.0"
   },
   "devDependencies": {
