--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next-http-backend": "^2.5.1",
     "next": "^14.2.2",
     "next-i18next": "^15.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.0",
