delete private data

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-#EMAIL_HOST_PASSWORD=123Abc456Ghj
-EMAIL_HOST_PASSWORD=cyyzojvqdxqfpnnn
+#EMAIL_HOST_PASSWORD=здесь написать пароль от почтового клиента, который отправляет письма
 EMAIL_USE_SSL=True
